--- a/templates/index.html
+++ b/templates/index.html
@@ -289,7 +289,7 @@
 
 
   <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
-  <a href="'img/logo.png">
+  <link rel="icon" type="image/png" a href="'img/logo.png">
 </head>
 
 
