--- a/templates/article.html
+++ b/templates/article.html
@@ -12,7 +12,7 @@
     }
   </style>
 
-  <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/logo.png') }}">
+  <link rel="icon" type="image/png" a href="'img/logo.png">
 </head>
 <body class="bg-white text-black font-sans">
 
