--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -12,7 +12,7 @@
     }
   </style>
 
-  <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/logo.png') }}">
+  <link rel="icon" type="image/png" a href="'img/logo.png">
 </head>
 <body class="bg-white text-black font-sans">
 
@@ -38,7 +38,7 @@
   class="w-full max-w-7xl mx-auto my-12 rounded-xl overflow-hidden shadow-2xl border-4 border-[#d1181e] relative opacity-0 translate-y-8 transition-all duration-1000 ease-in-out scroll-fade"
 >
   <img 
-    src="{{ url_for('static', filename='img/leaderboard_header.png') }}" 
+    src="img/leaderboard_header.png" 
     alt="Leaderboard Banner" 
     class="w-full h-auto object-cover"
   />
